# star_lang_src

./: CMakeLists.txt  README.md
BOXPL/: box_array.cpp  box_array.h  box_array_test.cpp  box_data.cpp  box_data.h  box_data_member.cpp  box_data_member.h  box_data_member_test.cpp  box_data_member_test.h  box_data_test.cpp  box_data_type.h  box_error.cpp  box_error.h  box_fw.h  box_instruction.cpp  box_instruction.h  box_member_collection.cpp  box_member_collection.h  box_member_collection_test.cpp  box_member_collection_test.h  box_memory_chunk.cpp  box_memory_chunk.h  box_memory_chunk_if.cpp  box_memory_chunk_if.h  box_memory_chunk_test.cpp  box_memory_chunk_test.h  box_method.cpp  box_method.h  box_method_member_collection.cpp  box_method_member_collection.h  box_monitor.cpp  box_monitor.h  box_object_member_collection.cpp  box_object_member_collection.h  box_utils.h  box_vector.cpp  box_vector.h  box_virtual_memory.cpp  box_virtual_memory.h  box_virtual_memory_test.cpp  (+5 more)
BOXPL/BOXPL/: BOXPL.pro  BOXPL.pro.user.8c0ab74
BOXPL/ORM/: entity.cpp  entity.h  entity_repository.cpp  entity_repository.h  orm.cpp  orm.h  orm_fw.h  orm_test.cpp  orm_test.h  relationship.cpp  relationship.h
BOXPL/build-BOXPL-Desktop_Qt_5_8_0_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  object_script.BOXPL.Debug  object_script.BOXPL.Release
BOXPL/tests/: box_array_test.cpp  box_data_test.cpp  box_memory_chunk_test.cpp  box_virtual_memory_test.cpp  test.cpp
documentation/: config.doxy
include/: box_array.h  box_assert.h  box_data.h  box_data_test.h  box_data_type.h  box_error.h  box_fw.h  box_instruction.h  box_memory_chunk.h  box_memory_chunk_if.h  box_method.h  box_monitor.h  box_virtual_memory.h  collection.h  data_type.h  error_info.h  file.h  file_mode.h  fw_decl.h  instruction.h  memory.h  memory_chunk.h  memory_chunk_if.h  method.h  primitive_data.h  virtual_memory.h
include/ConstantBundle/: Constants.h
include/InterpreterBundle/: Interpreter.h
include/MemoryBundle/: Memory.h  MemoryChunk.h  MemoryChunkIf.h  VirtualMemory.h
include/MethodBundle/: Method.h
include/MethodBundle/Instruction/: AssignInstruction.h  CreateAndAssignConstantInstruction.h  CreateAndAssignObjectInstruction.h  CreateInstruction.h  Instruction.h  OpCode.h  PopAndStoreInstruction.h  PushConstantInstruction.h
include/ORM/: FwDecl.h  MasterRelationships.h  ORM.h  Object.h  ObjectRepository.h  Relationship.h  Relationships.h  SlaveRelationships.h  eObjectType.h  eRelationshipType.h  entity.h  entity_repository.h  object.h  object_repository.h  object_type.h  orm.h  orm_fw.h  orm_test.h  relationship.h  relationship_type.h
include/ObjectBundle/: Visibility.h
include/ObjectBundle/Instance/: ObjectField.h  ObjectInstance.h
include/ObjectBundle/Model/: FieldInfo.h  ObjectInfo.h
include/ThreadBundle/: Thread.h
include/VariableBundle/: Value.h  Var.h
include/VariableBundle/Collection/: Collection.h
include/VariableBundle/File/: File.h  FileMode.h
include/VariableBundle/Null/: Null.h
include/VariableBundle/Primitive/: Bool.h  Char.h  DataType.h  Float.h  Int.h  Primitive.h  String.h
include/error_handler/: error_info.h  error_log.h
include/instructions/: abstract_instruction.h  create_and_assign_constant_instruction.h  create_and_assign_object_instruction.h  create_instruction.h  op_code.h  pop_and_store_instruction.h
include/interpreter/: interpreter.h
include/memory_handler/: memory.h  memory_chunk.h  memory_chunk_if.h  virtual_memory.h
include/method/: method.h
include/method/instructions/: abstract_instruction.h  (+5 more)
include/primitive_data/: bool_data.h  char_data.h  float_data.h  int_data.h  primitive_data.h  string_data.h
include/thread/: thread.h
include/variable/: value.h  var.h
source/: box_array.cpp  box_assert.cpp  box_data.cpp  box_data_type.cpp  box_error.cpp  box_instruction.cpp  box_memory_chunk.cpp  box_memory_chunk_if.cpp  box_method.cpp  box_monitor.cpp  box_virtual_memory.cpp  collection.cpp  data_type.cpp  error_info.cpp  error_log.cpp  file.cpp  file_mode.cpp  instruction.cpp  main.cpp  memory.cpp  memory_chunk.cpp  memory_chunk_if.cpp  method.cpp  primitive_data.cpp  virtual_memory.cpp
source/ConstantBundle/: Constants.cpp
source/ErrorBundle/: ErrorLog.cpp
source/InterpreterBundle/: Interpreter.cpp
source/MemoryBundle/: Memory.cpp  MemoryChunk.cpp  MemoryChunkIf.cpp  VirtualMemory.cpp
source/MethodBundle/: Method.cpp
source/ORM/: MasterRelationships.cpp  ORM.cpp  Object.cpp  ObjectRepository.cpp  Relationship.cpp  Relationships.cpp  SlaveRelationships.cpp  entity.cpp  entity_repository.cpp  object.cpp  object_repository.cpp  orm.cpp  orm_test.cpp  relationship.cpp
source/ThreadBundle/: Thread.cpp
source/VariableBundle/: Value.cpp  Var.cpp
source/error_handler/: error_info.cpp  error_log.cpp
source/instructions/: abstract_instruction.cpp  create_and_assign_constant_instruction.cpp  create_and_assign_object_instruction.cpp  create_instruction.cpp  pop_and_store_instruction.cpp
source/interpreter/: interpreter.cpp
source/memory_handler/: memory.cpp  memory_chunk.cpp  memory_chunk_if.cpp  virtual_memory.cpp
source/method/: method.cpp
source/primitive_data/: bool_data.cpp  char_data.cpp  float_data.cpp  int_data.cpp  primitive_data.cpp  string_data.cpp
source/thread/: thread.cpp
source/variable/: value.cpp  var.cpp
test/: test.cpp  test.h  test_assert.cpp  test_assert.h
tests/: box_array_test.cpp  box_array_test.h  box_data_test.cpp  box_memory_chunk_test.cpp  box_memory_chunk_test.h  box_virtual_memory_test.cpp  box_virtual_memory_test.h  collection_test.cpp  collection_test.h  data_type_test.cpp  file_test.cpp  file_test.h  memory_chunk_test.cpp  memory_chunk_test.h  orm_test.cpp  primitive_data_test.cpp  primitive_data_test.h  test.cpp  test.h  test_assert.cpp  test_assert.h  virtual_memory_test.cpp  virtual_memory_test.h
tests/ORM/: orm_test.cpp
tests/instructions/: create_and_assign_constant_instruction_test.cpp  create_and_assign_constant_instruction_test.h  create_instruction_test.cpp  create_instruction_test.h
(+81 files in other folders)
